[Fix][Design] 반응형 메뉴 디자인 변경, 메인 포켓몬 카드 z-index 변경

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -129,7 +129,7 @@ article {
   height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  z-index: 9999; /* Stay on top */
   top: 0;
   right: 0;
   background-color:#ecc22e; /* Color*/
